[package]
name = "planets"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
image = "0.23"
palette = "0.5"
anyhow = "1"
rand = "0.7"
uuid = { version = "0.8", features = ["v4"] }
euclid = "0.22"
spade = "1"
sorted-vec = "0.4"
