[package]
name = "magrathea"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "A pixel-art procedural planet generation library and tool"
readme = "./README.md"
keywords = ["procedural", "planets", "image"]
categories = ["multimedia::images", "game-development"]
repository = "https://github.com/khonsulabs/magrathea"

[features]
default = []
cli = ["structopt", "hex"]
editor = ["kludgine", "cli"]

[dependencies]
image = "0.23"
palette = "0.5"
anyhow = "1"
rand = "0.7"
uuid = { version = "0.8", features = ["v4"] }
euclid = "0.22"
spade = "1"
sorted-vec = "0.4"
serde = "1"
serde_derive = "1"
kludgine = { path = "../kludgine", optional = true }
structopt = { version = "0.3", optional = true }
hex = { version = "0.4", optional = true }

[[bin]]
name = "magrathea"
path = "src/main.rs"
required-features = ["cli"]
