[package]
name = "magrathea"
version = "0.0.3"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "A pixel-art procedural planet generation library and tool"
readme = "./README.md"
license = "MIT"
keywords = ["procedural", "planets", "image"]
categories = ["multimedia::images", "game-development"]
repository = "https://github.com/khonsulabs/magrathea"

[features]
default = []
cli = ["structopt", "hex"]
editor = ["kludgine", "cli"]
serialization = ["palette/serializing"]

[dependencies]
image = "0.23"
palette = "0.5"
anyhow = "1"
rand = { version = "0.8", features = ["small_rng"] }
euclid = "0.22"
sorted-vec = "0.5"
kludgine = { version = "0.0.2", optional = true }
structopt = { version = "0.3", optional = true }
hex = { version = "0.4", optional = true }
noise = "0.7"

[[bin]]
name = "magrathea"
path = "src/main.rs"
required-features = ["cli"]

[patch.crates-io]
kludgine = { path = "../kludgine" }
